remove unnecesarry (un)boxing, semicolons, method calls, field declarations
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>